--- a/OracleJETApplication-V-2/views/labor-management/overview/overview-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/overview/overview-large.html
@@ -51,7 +51,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
                                                 </div>
@@ -70,7 +70,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -90,7 +90,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -110,7 +110,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -130,7 +130,7 @@
                                                 <div data-bind="foreach: employees;" style="margin-top: 5px">
                                                     <img data-bind="attr: {src: 'css/images/people/'+empid+'.png'};" 
                                              style="height: 20px; width: 30px;"/>
-                                                    <a href="#" data-bind="click: $parent.empBasicInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
+                                                    <a href="#" data-bind="click: $parents[6].empScheduleDetailInfoOpen"> <strong><span data-bind="text: empname"></span></strong></a>
                                                     
                                                     <br /><span data-bind="text: timings"></span>
                                                     <br /><span data-bind="text: hours +' hours | $'+hourlywage"></span><br />
@@ -351,4 +351,5 @@
 
 </div>
 <div data-bind="template: {name: 'labor-management/dialogwindow/schedule-dailogwindow-large'}"></div>
+<div data-bind="template: {name: 'labor-management/dialogwindow/shift-detail-dialogwindow-large'}"></div>
 
