--- a/OracleJETApplication-V-2/views/labor-management/overview/overview-small.html
+++ b/OracleJETApplication-V-2/views/labor-management/overview/overview-small.html
@@ -8,6 +8,7 @@
                         <span>Schedule</span>
                         <a href="#" class="accordionLink" data-bind="click: $parent.empDayScheduleOpen"><i class="fa fa-eye" aria-hidden="true"></i>
 View complete schedule</a>
+                   <--test comment-->
                     </div>
 
                     <div>
