update from Ramu

--- a/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-large.html
@@ -131,6 +131,7 @@
                 <div id="filmStripDiv">
                     <div id="filmStrip" aria-label="Set of chemicals" data-bind="ojComponent: {component: 'ojFilmStrip', 
                             arrowPlacement: $parent.currentNavArrowPlacement, 
+                            maxItemsPerPage : 4,
                             arrowVisibility: $parent.currentNavArrowVisibility}">
 
                         <!-- ko foreach:$parent.formttedCurrentScheduledDateValues -->
