--- a/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-small.html
+++ b/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-small.html
@@ -72,7 +72,7 @@
          <div >
              <input id="btnJob" type="button" value="JOB" 
                     style="background-color: #FF4000; color: #ffffff; width: 30px; font-size: 10px; height: 30px" title="Job"
-                    data-bind="click: $parent.changeTabContent('Job'), visible: ($parent.selectedTab() !== 'Job');"/>
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Job');"/>
          </div>
          <div >
              <input id="btnEmployee" type="button" value="EMPLOYEE" 
@@ -82,7 +82,7 @@
          <div >
              <input id="btnEmployee" type="button" value="EMPLOYEE" 
                     style="background-color: #FF4000; color: #ffffff; width: 60px; font-size: 10px; height: 30px" title="Employee"
-                    data-bind="click: $parent.changeTabContent('Employee'), visible: ($parent.selectedTab() !== 'Employee');"/>
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Employee');"/>
          </div>
          <div>
              <input id="btnDay" type="button" value="DAY" 
@@ -92,7 +92,7 @@
          <div>
              <input id="btnDay" type="button" value="DAY" 
                     style="background-color: #FF4000; color: #ffffff; width: 30px; font-size: 10px; height: 30px" title="Day"
-                    data-bind="click: $parent.changeTabContent('Day'), visible: ($parent.selectedTab() !== 'Day')" 
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Day')" 
                     />
          </div>
          <div>
@@ -103,20 +103,20 @@
          <div>
              <input id="btnStation" type="button" value="STATION" 
                     style="background-color: #FF4000; color: #ffffff; width: 60px; font-size: 10px; height: 30px" title="Station"
-                    data-bind="click: $parent.changeTabContent('Station'), visible: ($parent.selectedTab() !== 'Station')" 
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Station')" 
                     />
          </div>
- <!--    <div>
+         <div>
              <input id="btnLocation" type="button" value="LOCATION" 
                     style="background-color: #ffffff; color: #000000; width: 60px; font-size: 10px; height: 30px" title="Location"
                     data-bind="visible: ($parent.selectedTab() === 'Location')"/>
          </div>
-        <div >
+         <div >
              <input id="btnLocation" type="button" value="LOCATION" 
                     style="background-color: #FF4000; color: #ffffff; width: 60px; font-size: 10px; height: 30px" title="Location"
-                    data-bind="click: $parent.changeTabContent('Location'), visible: ($parent.selectedTab() !== 'Location');"/>
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Location');"/>
          </div>
-         <div>
+<!--         <div>
              <input id="btnRevenue" type="button" value="REV CENTER" 
                     style="background-color: #ffffff; color: #000000; width: 60px; font-size: 10px; height: 30px" title="Revenue"
                     data-bind="visible: ($parent.selectedTab() === 'Revenue')"/>
