--- a/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
@@ -46,7 +46,7 @@
          <div >
              <input id="btnJob" type="button" value="JOB" 
                     style="background-color: #FF4000; color: #ffffff; width: 70px; height: 30px" title="Job"
-                    data-bind="click: $parent.changeTabContent('Job'), visible: ($parent.selectedTab() !== 'Job');"/>
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Job');"/>
          </div>
          <div >
              <input id="btnEmployee" type="button" value="EMPLOYEE" 
@@ -56,7 +56,7 @@
          <div >
              <input id="btnEmployee" type="button" value="EMPLOYEE" 
                     style="background-color: #FF4000; color: #ffffff; width: 100px; height: 30px" title="Employee"
-                    data-bind="click: $parent.changeTabContent('Employee'), visible: ($parent.selectedTab() !== 'Employee');"/>
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Employee');"/>
          </div>
          <div>
              <input id="btnDay" type="button" value="DAY" 
@@ -66,7 +66,7 @@
          <div>
              <input id="btnDay" type="button" value="DAY" 
                     style="background-color: #FF4000; color: #ffffff; width: 70px; height: 30px" title="Day"
-                    data-bind="click: $parent.changeTabContent('Day'), visible: ($parent.selectedTab() !== 'Day')" 
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Day')" 
                     />
          </div>
          <div>
@@ -77,10 +77,9 @@
          <div>
              <input id="btnStation" type="button" value="STATION" 
                     style="background-color: #FF4000; color: #ffffff; width: 80px; height: 30px" title="Station"
-                    data-bind="click: $parent.changeTabContent('Station'), visible: ($parent.selectedTab() !== 'Station')" 
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Station')" 
                     />
          </div>
-<!--
          <div>
              <input id="btnLocation" type="button" value="LOCATION" 
                     style="background-color: #ffffff; color: #000000; width: 90px; height: 30px" title="Location"
@@ -89,9 +88,8 @@
          <div >
              <input id="btnLocation" type="button" value="LOCATION" 
                     style="background-color: #FF4000; color: #ffffff; width: 90px; height: 30px" title="Location"
-                    data-bind="click: $parent.changeTabContent('Location'), visible: ($parent.selectedTab() !== 'Location');"/>
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Location');"/>
          </div>
-
          <div>
              <input id="btnRevenue" type="button" value="REVENUE CENTER" 
                     style="background-color: #ffffff; color: #000000; width: 150px; height: 30px" title="Revenue"
@@ -100,10 +98,9 @@
          <div>
              <input id="btnRevenue" type="button" value="REVENUE CENTER" 
                     style="background-color: #FF4000; color: #ffffff; width: 150px; height: 30px" title="Revenue"
-                    data-bind="click: $parent.changeTabContent('Revenue'), visible: ($parent.selectedTab() !== 'Revenue')" 
+                    data-bind="click: $parent.changeTabContent, visible: ($parent.selectedTab() !== 'Revenue')" 
                     />
          </div>
--->
      </div> 
      
      <div class="oj-flex" data-bind="visible: ($parent.selectedTab() === 'Job')">
