update from Ramu

--- a/OracleJETApplication-V-2/views/labor-management/overview/overview-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/overview/overview-large.html
@@ -350,6 +350,6 @@
 </div>
 
 </div>
-<div data-bind="template: {name: 'labor-management/dialogwindow/schedule-dailogwindow-large'}"></div>
+<!--<div data-bind="template: {name: 'labor-management/dialogwindow/schedule-dailogwindow-large'}"></div>-->
 <div data-bind="template: {name: 'labor-management/dialogwindow/shift-detail-dialogwindow-large'}"></div>
 
